feat: add fathom to new site

--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,7 @@
 			href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
 			rel="stylesheet"
 		/>
+		<script src="https://cdn.usefathom.com/script.js" data-site="KTWCCGGW" defer></script>
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
